todos and added own api yaml file
