# Backend/src/controller/root.controller.js
@@ -32,11 +32,11 @@ export default class RootController {
     async index(req, res, next) {
         //// TODO: Example-Collection hier durch eigene Collections ersetzen ////
         res.sendResult([
-            // {
-            //     _name: "example",
-            //     query: {url: "/example", method: "GET", queryParams: ["search"]},
-            //     create: {url: "/example", method: "POST"},
-            // }
+            {
+                 _name: "pet",
+                 query: {url: "/pet", method: "GET", queryParams: ["name", "birthday", "animalType"]},
+                 create: {url: "/pet", method: "POST"},
+            }
         ]);
 
         next();
